[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Nodes/Hitboxes and Hurtboxes/Hurtbox/Hurtbox.gd" type="Script" id=1]
[ext_resource path="res://src/Nodes/Hitboxes and Hurtboxes/Hitbox/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Assets/Shaders/energybeam.shader" type="Shader" id=3]
[ext_resource path="res://src/Nodes/Boss/Moon/Moon.gd" type="Script" id=4]
[ext_resource path="res://Assets/Shaders/white.shader" type="Shader" id=5]
[ext_resource path="res://src/Scenes/Level 5/headman2.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 5 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 3 )
shader_param/beams = 2
shader_param/energy = 5.0
shader_param/roughness = 3
shader_param/frequency = 10
shader_param/speed = 1.0
shader_param/thickness = 0.1
shader_param/outline_thickness = 0.1
shader_param/beam_difference = 0.0
shader_param/glow = 0.0
shader_param/outline_glow = 0.0
shader_param/color = Color( 0.984314, 0.572549, 0.235294, 1 )
shader_param/outline_color = Color( 0.984314, 0.572549, 0.235294, 1 )
shader_param/progress = 1.0
shader_param/y_offset = 0.0
shader_param/fixed_edge_size = 0.05
shader_param/noise_scale = Vector2( 1, 1 )

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1.25, 1.23, 0.6, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="CircleShape2D" id=5]
radius = 192.042

[sub_resource type="CircleShape2D" id=6]
radius = 190.0

[sub_resource type="Animation" id=8]
resource_name = "Hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Moon" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="DeathEffectPosition" type="Position2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="YappingAttackPosition" type="Position2D" parent="Pivot"]
position = Vector2( 112, 140 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Sprite" type="Sprite" parent="Pivot"]
material = SubResource( 11 )
texture = ExtResource( 6 )

[node name="BeamAttackPosition" type="Position2D" parent="Pivot"]
position = Vector2( 132, -64 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Beam" type="ColorRect" parent="Pivot/BeamAttackPosition"]
visible = false
material = SubResource( 7 )
margin_top = -120.0
margin_right = 1920.0
margin_bottom = 120.0
rect_rotation = -45.0
rect_pivot_offset = Vector2( 0, 120 )
rect_clip_content = true

[node name="Panel" type="Panel" parent="Pivot/BeamAttackPosition/Beam"]
show_behind_parent = true
material = SubResource( 12 )
margin_left = -42.4264
margin_top = 77.5736
margin_right = 37.5736
margin_bottom = 157.574
custom_styles/panel = SubResource( 13 )

[node name="Hitbox" type="Area2D" parent="Pivot"]
position = Vector2( -4, -4 )
collision_layer = 0
script = ExtResource( 2 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hitbox"]
shape = SubResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/Hitbox"]
polygon = PoolVector2Array( 128, 212, 156, 196, 188, 84, 192, -28, 152, -140, 88, -208, 4, -224, -56, -208, -120, -180, -164, -96, -192, -28, -192, 36, -172, 92, -140, 136, -100, 168, -48, 184, -12, 176, 88, 220 )

[node name="Hurtbox" type="Area2D" parent="Pivot"]
position = Vector2( -4, -4 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hurtbox"]
position = Vector2( 2, 0 )
shape = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/Hurtbox"]
polygon = PoolVector2Array( 128, 212, 156, 196, 188, 84, 192, -28, 152, -140, 88, -208, 4, -224, -56, -208, -120, -180, -164, -96, -192, -28, -192, 36, -172, 92, -140, 136, -100, 168, -48, 184, -12, 176, 88, 220 )

[node name="EffectsPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 8 )
anims/RESET = SubResource( 10 )
